group author tab 90%

--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-functions/group-author-functions.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-functions/group-author-functions.component.html
@@ -1,137 +1,89 @@
-<div class="d-flex flex-column hooks-content w-100">
-  <div class="top-bar d-flex align-items-center justify-content-between bg-light pl-3">
-    <span class="font-weight-bold">Functions Access Settings</span>
+<div class="d-flex flex-column groups-content w-100 p-4">
+  <div class="top-bar d-flex align-items-center justify-content-between">
+    <div class="w-100">
+      <h5 class="font-weight-bolder">Function</h5>
+    </div>
+    <!-- <select name="permissions" id="permissions" class="all-permissions-selector custom-select"
+      [ngModel]="globalPermission" (ngModelChange)="changeAllPermissions($event)">
+      <option value="custom">Custom</option>
+      <option value="blocked">None</option>
+      <option value="view">View</option>
+      <option value="manage">Manage</option>
+    </select> -->
   </div>
-  <div class="d-flex align-items-start w-100 py-3 border-bottom">
-    <!-- <div class="service-name">
-      <span class="fa fa-globe mr-2"></span>
-      <span class="font-weight-bold mr-1">Global</span>
-      <span class="text-accent">(All Libraries)</span>
-    </div> -->
-    <div class="d-flex flex-column align-items-center permission-div">
-      <span class="normal-heading mb-3">Permission</span>
-      <div class="position-relative">
-        <div class="rounded-dropdown-toggle d-flex align-items-center ignore-outside"
-          (click)="toggleDropdown['FAAS']=hasPermission('PMGAF')?(!toggleDropdown['FAAS']):false"
-          [ngClass]="{'blocked':faasPermissionType === 'Hide','view':faasPermissionType === 'View','manage':faasPermissionType === 'Manage','hover':hasPermission('PMGAF')}">
-          <div class="icon d-flex align-items-center justify-content-center">
-            <span *ngIf="faasPermissionType === 'Hide'" class="fa fa-lock"></span>
-            <span *ngIf="faasPermissionType === 'View'" class="fa fa-eye"></span>
-            <span *ngIf="faasPermissionType === 'Manage'" class="fa fa-pen"></span>
-          </div>
-          <div *ngIf="faasPermissionType === 'Hide'" class="text">Blocked</div>
-          <div *ngIf="faasPermissionType === 'View'" class="text">View</div>
-          <div *ngIf="faasPermissionType === 'Manage'" class="text">Manage</div>
-          <span *ngIf="hasPermission('PMGAF')" class="fa fa-angle-down fa-sm"></span>
+  <div class="d-flex flex-column w-100">
+    <div class="d-flex justify-content-between border-bottom mt-4">
+      <div>
+        <div class="p-3 text-dark">
+          <div class="font-weight-bold">Access Level</div>
+          <span class="text-muted font-13">
+            Permission to manage Function.
+          </span>
         </div>
-        <div *ngIf="toggleDropdown['FAAS']" class="rounded-dropdown" odpClickOutside
-          (outside)="toggleDropdown['FAAS']=false">
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="togglePermission('PNF');toggleDropdown['FAAS']=false">
-            <div class="icon d-flex align-items-center justify-content-center blocked">
-              <span class="fa fa-lock"></span>
-            </div>
-            <div class="text">Blocked</div>
-          </div>
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="togglePermission('PVF');toggleDropdown['FAAS']=false">
-            <div class="icon d-flex align-items-center justify-content-center view">
-              <span class="fa fa-eye"></span>
-            </div>
-            <div class="text">View</div>
-          </div>
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="togglePermission('PMF');toggleDropdown['FAAS']=false">
-            <div class="icon d-flex align-items-center justify-content-center manage">
-              <span class="fa fa-pen"></span>
-            </div>
-            <div class="text">Manage</div>
-          </div>
+      </div>
+      <div class="d-flex align-items-center">
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryBlocked" name="library" size="20" [checked]="permissionType=='blocked'"
+            (checkedChange)="commonPermission={id:'PNF',type:''}"></odp-round-radio>
+          <span class="text-dark ml-2">Blocked</span>
+        </div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryView" name="library" size="20" [checked]="permissionType=='view'"
+            (checkedChange)="commonPermission={id:'PVF',type:''}"></odp-round-radio>
+          <span class="text-dark ml-2">View</span>
+        </div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryManage" name="library" size="20" [checked]="permissionType=='manage'"
+            (checkedChange)="commonPermission={id:'PMF',type:''}"></odp-round-radio>
+          <span class="text-dark ml-2">Manage</span>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-between border-bottom mt-4">
+      <div>
+        <div class="p-3 text-dark">
+          <div class="font-weight-bold">Deploy</div>
+          <span class="text-muted font-13">
+            Permission to deploy Function.
+          </span>
+        </div>
+      </div>
+      <div class="d-flex align-items-center">
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryBlocked" name="library" size="20" [checked]="powerPermissionDeploy=='blocked'"
+            (checkedChange)="commonPermission={id:'PNFPD',type:'PD'}"></odp-round-radio>
+          <span class="text-dark ml-2">Blocked</span>
+        </div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end"></div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryManage" name="library" size="20" [checked]="powerPermissionDeploy=='manage'"
+            (checkedChange)="commonPermission={id:'PMFPD',type:'PD'}"></odp-round-radio>
+          <span class="text-dark ml-2">Manage</span>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-between border-bottom mt-4">
+      <div>
+        <div class="p-3 text-dark">
+          <div class="font-weight-bold">Start/Stop</div>
+          <span class="text-muted font-13">
+            Permission to start and stop Function.
+          </span>
+        </div>
+      </div>
+      <div class="d-flex align-items-center">
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryBlocked" name="library" size="20" [checked]="powerPermissionsStartStop=='blocked'"
+            (checkedChange)="commonPermission={id:'PNFPS',type:'PS'}"></odp-round-radio>
+          <span class="text-dark ml-2">Blocked</span>
+        </div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end"></div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryManage" name="library" size="20" [checked]="powerPermissionsStartStop=='manage'"
+            (checkedChange)="commonPermission={id:'PMFPS',type:'PS'}"></odp-round-radio>
+          <span class="text-dark ml-2">Manage</span>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="p-3 text-accent">Power Settings</div>
-      <div class="basic-settings d-flex flex-column  align-items-start w-100 px-3 border-bottom">
-        <div class="d-flex py-3 align-items-center">
-          <div class="label">
-            <span class="mr-1">
-              <span class="text font-weight-bold ">Deployment</span>
-              <br>
-              <span class="text-muted font-13">
-                Permission to manage deployment.
-              </span>
-            </span>
-          </div>
-          <div class="value pl-4 d-flex flex-column">
-            <div class="level-one position-relative mb-3">
-              <div class="rounded-dropdown-toggle d-flex align-items-center ignore-outside" (click)="toggleDropdown['powerSettingsDeploy']=hasPermission('PMGADS')?(!toggleDropdown['powerSettingsDeploy']):false"
-                [ngClass]="{'blocked':powerPermissionDeploy === 'blocked','manage':powerPermissionDeploy === 'manage','hover':hasPermission('PMDSPD')}">
-                <div class="icon d-flex align-items-center justify-content-center">
-                  <span *ngIf="powerPermissionDeploy === 'blocked'" class="fa fa-lock"></span>
-                  <span *ngIf="powerPermissionDeploy === 'manage'" class="fa fa-pen"></span>
-                </div>
-                <div *ngIf="powerPermissionDeploy === 'blocked'" class="text">Blocked</div>
-                <div *ngIf="powerPermissionDeploy === 'manage'" class="text">Manage</div>
-                <span *ngIf="hasPermission('PMDSPD')" class="fa fa-angle-down fa-sm"></span>
-              </div>
-              <div *ngIf="toggleDropdown['powerSettingsDeploy']" class="rounded-dropdown" odpClickOutside (outside)="toggleDropdown['powerSettingsDeploy']=false">
-                <div class="rounded-dropdown-item d-flex align-items-center" (click)="toggleDropdown['powerSettingsDeploy']=false;commonPermission={id:'PNFPD',type:'PD'}">
-                  <div class="icon d-flex align-items-center justify-content-center blocked">
-                    <span class="fa fa-lock"></span>
-                  </div>
-                  <div class="text">Blocked</div>
-                </div>
-                <div class="rounded-dropdown-item d-flex align-items-center" (click)="toggleDropdown['powerSettingsDeploy']=false;commonPermission={id:'PMFPD',type:'PD'}">
-                  <div class="icon d-flex align-items-center justify-content-center manage">
-                    <span class="fa fa-pen"></span>
-                  </div>
-                  <div class="text">Manage</div>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-        <div class="d-flex py-3 align-items-center">
-          <div class="label">
-            <span class="mr-1">
-              <span class="text font-weight-bold ">Start/Stop</span>
-              <br>
-              <span class="text-muted font-13">
-                Permission to manage start/stop.
-              </span>
-            </span>
-          </div>
-          <div class="value pl-4 d-flex flex-column">
-            <div class="level-one position-relative mb-3">
-              <div class="rounded-dropdown-toggle d-flex align-items-center ignore-outside" (click)="toggleDropdown['powerSettingsStartStop']=hasPermission('PMGADS')?(!toggleDropdown['powerSettingsStartStop']):false"
-                [ngClass]="{'blocked':powerPermissionsStartStop === 'blocked', 'manage':powerPermissionsStartStop === 'manage','hover':hasPermission('PMDSPD')}">
-                <div class="icon d-flex align-items-center justify-content-center">
-                  <span *ngIf="powerPermissionsStartStop === 'blocked'" class="fa fa-lock"></span>
-                  <span *ngIf="powerPermissionsStartStop === 'manage'" class="fa fa-pen"></span>
-                </div>
-                <div *ngIf="powerPermissionsStartStop === 'blocked'" class="text">Blocked</div>
-                <div *ngIf="powerPermissionsStartStop === 'manage'" class="text">Manage</div>
-                <span *ngIf="hasPermission('PMGADS')" class="fa fa-angle-down fa-sm"></span>
-              </div>
-              <div *ngIf="toggleDropdown['powerSettingsStartStop']" class="rounded-dropdown" odpClickOutside (outside)="toggleDropdown['powerSettingsStartStop']=false">
-                <div class="rounded-dropdown-item d-flex align-items-center" (click)="toggleDropdown['powerSettingsStartStop']=false;commonPermission={id:'PNFPS',type:'PS'}">
-                  <div class="icon d-flex align-items-center justify-content-center blocked">
-                    <span class="fa fa-lock"></span>
-                  </div>
-                  <div class="text">Blocked</div>
-                </div>
-                <div class="rounded-dropdown-item d-flex align-items-center" (click)="toggleDropdown['powerSettingsStartStop']=false;commonPermission={id:'PMFPS',type:'PS'}">
-                  <div class="icon d-flex align-items-center justify-content-center manage">
-                    <span class="fa fa-pen"></span>
-                  </div>
-                  <div class="text">Manage</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 </div>
