--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-users/group-author-users.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-users/group-author-users.component.html
@@ -1,179 +1,87 @@
-<div class="d-flex flex-column groups-content w-100">
-  <div class="top-bar d-flex align-items-center justify-content-between bg-light pl-3">
-    <span class="font-weight-bold">User Access Settings</span>
-    <!-- <span class="help d-flex align-items-center" (click)="showHelp()">
-      <span class="fa fa-info-circle mx-1"></span>
-      <span class="text">Help</span>
-    </span> -->
-  </div>
-  <div class="text-accent p-3">User Info</div>
-  <div class="basic-settings d-flex align-items-start w-100 p-3 border-bottom">
-    <div class="label">
-      <span class="font-weight-bold mr-1">
-        <span class="text">Access Level</span>
-        <br>
-        <span class="text-muted font-13">
-          Permission to view or make changes to user details like name, phone, apps, attributes, etc.
-        </span>
-      </span>
+<div class="d-flex flex-column groups-content w-100 p-4">
+  <div class="top-bar d-flex align-items-center justify-content-between">
+    <div class="w-100">
+      <h5 class="font-weight-bolder">Users</h5>
     </div>
-    <div class="value pl-4 d-flex flex-column">
-      <div class="level-one position-relative mb-3">
-        <div class="rounded-dropdown-toggle d-flex align-items-center ignore-outside"
-          (click)="dropdownToggle['userInfo']=hasPermission('PMGAU')?(!dropdownToggle['userInfo']):false"
-          [ngClass]="{'blocked':basicPermission === 'blocked','view':basicPermission === 'view','manage':basicPermission === 'manage','hover':hasPermission('PMGAU')}">
-          <div class="icon d-flex align-items-center justify-content-center">
-            <span *ngIf="basicPermission === 'blocked'" class="fa fa-lock"></span>
-            <span *ngIf="basicPermission === 'view'" class="fa fa-eye"></span>
-            <span *ngIf="basicPermission === 'manage'" class="fa fa-pen"></span>
-          </div>
-          <div *ngIf="basicPermission === 'blocked'" class="text">Blocked</div>
-          <div *ngIf="basicPermission === 'view'" class="text">View</div>
-          <div *ngIf="basicPermission === 'manage'" class="text">Manage</div>
-          <span *ngIf="hasPermission('PMGAU')" class="fa fa-angle-down fa-sm"></span>
-        </div>
-        <div *ngIf="dropdownToggle['userInfo']" class="rounded-dropdown" odpClickOutside
-          (outside)="dropdownToggle['userInfo']=false">
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="dropdownToggle['userInfo']=false;basicPermission='PNUB'">
-            <div class="icon d-flex align-items-center justify-content-center blocked">
-              <span class="fa fa-lock"></span>
-            </div>
-            <div class="text">Blocked</div>
-          </div>
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="dropdownToggle['userInfo']=false;basicPermission='PVUB'">
-            <div class="icon d-flex align-items-center justify-content-center view">
-              <span class="fa fa-eye"></span>
-            </div>
-            <div class="text">View</div>
-          </div>
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="dropdownToggle['userInfo']=false;basicPermission=['PMUBC','PMUBU','PMUBD']">
-            <div class="icon d-flex align-items-center justify-content-center manage">
-              <span class="fa fa-pen"></span>
-            </div>
-            <div class="text">Manage</div>
-          </div>
+    <!-- <select name="permissions" id="permissions" class="all-permissions-selector custom-select"
+      [ngModel]="globalPermission" (ngModelChange)="changeAllPermissions($event)">
+      <option value="custom">Custom</option>
+      <option value="blocked">None</option>
+      <option value="view">View</option>
+      <option value="manage">Manage</option>
+    </select> -->
+  </div>
+  <div class="d-flex flex-column w-100">
+    <div class="d-flex justify-content-between border-bottom mt-4">
+      <div>
+        <div class="p-3 text-dark">
+          <div class="font-weight-bold">Access Level</div>
+          <span class="text-muted font-13">
+            Permission to manage Users.
+          </span>
         </div>
       </div>
-      <div *ngIf="basicPermission==='manage'" class="level-two position-relative d-flex align-items-center mb-3">
-        <div class="round-checkbox d-flex align-items-center justify-content-between mr-3"
-          [ngClass]="{'checked':createPermission,'disabled':!hasPermission('PMGAU')}"
-          (click)="togglePermissionLevel('C')">
-          <div class="text">Create</div>
-          <div class="round-check d-flex align-items-center justify-content-center">
-            <span class="fa fa-check"></span>
-          </div>
+      <div class="d-flex align-items-center">
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryBlocked" name="library" size="20" [checked]="basicPermission=='blocked'"
+            (checkedChange)="basicPermission='PNUB'"></odp-round-radio>
+          <span class="text-dark ml-2">Blocked</span>
         </div>
-        <div *ngIf="authType === 'azure'" class="round-checkbox d-flex align-items-center justify-content-between mr-3"
-          [ngClass]="{'checked':createExternalPermission,'disabled':!hasPermission('PMGAU')}"
-          (click)="togglePermissionLevel('CE')">
-          <div class="text">Add from external source</div>
-          <div class="round-check d-flex align-items-center justify-content-center">
-            <span class="fa fa-check"></span>
-          </div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryView" name="library" size="20" [checked]="basicPermission=='view'"
+            (checkedChange)="basicPermission='PVUB'"></odp-round-radio>
+          <span class="text-dark ml-2">View</span>
         </div>
-        <div class="round-checkbox d-flex align-items-center justify-content-between mr-3"
-          [ngClass]="{'checked':editPermission,'disabled':!hasPermission('PMGAU')}"
-          (click)="togglePermissionLevel('U')">
-          <div class="text">Edit</div>
-          <div class="round-check d-flex align-items-center justify-content-center">
-            <span class="fa fa-check"></span>
-          </div>
-        </div>
-        <div class="round-checkbox d-flex align-items-center justify-content-between mr-3"
-          [ngClass]="{'checked':deletePermission,'disabled':!hasPermission('PMGAU')}"
-          (click)="togglePermissionLevel('D')">
-          <div class="text">Delete</div>
-          <div class="round-check d-flex align-items-center justify-content-center">
-            <span class="fa fa-check"></span>
-          </div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryManage" name="library" size="20" [checked]="basicPermission=='manage'"
+            (checkedChange)="basicPermission=['PMUBC','PMUBCE','PMUBU','PMUBD']"></odp-round-radio>
+          <span class="text-dark ml-2">Manage</span>
         </div>
       </div>
     </div>
-  </div>
-  <div class="p-3 d-flex align-items-center w-100">
-    <span class="sub-heading text-accent">Access Settings</span>
-  </div>
-  <div class="access-settings d-flex align-items-start w-100 p-3">
-    <div class="label">
-      <span class="font-weight-bold mr-1">
-        <span class="text">Session & Login Access</span>
-        <br>
-        <span class="text-muted font-13">Permission to reset password and logout user.</span>
-      </span>
-    </div>
-    <div class="value pl-4 d-flex flex-column">
-      <div class="level-one position-relative mb-3">
-        <div class="rounded-dropdown-toggle d-flex align-items-center ignore-outside"
-          (click)="dropdownToggle['session']=hasPermission('PMGAU')?(!dropdownToggle['session']):false"
-          [ngClass]="{'blocked':sessionPermission === 'blocked','manage':sessionPermission === 'manage','hover':hasPermission('PMGAU')}">
-          <div class="icon d-flex align-items-center justify-content-center">
-            <span *ngIf="sessionPermission === 'blocked'" class="fa fa-lock"></span>
-            <span *ngIf="sessionPermission === 'manage'" class="fa fa-pen"></span>
-          </div>
-          <div *ngIf="sessionPermission === 'blocked'" class="text">Blocked</div>
-          <div *ngIf="sessionPermission === 'manage'" class="text">Manage</div>
-          <span *ngIf="hasPermission('PMGAU')" class="fa fa-angle-down fa-sm"></span>
+    <div class="d-flex justify-content-between border-bottom mt-4">
+      <div>
+        <div class="p-3 text-dark">
+          <div class="font-weight-bold">Session & Login</div>
+          <span class="text-muted font-13">
+            Permission to manage User's session and Reset Password.
+          </span>
         </div>
-        <div *ngIf="dropdownToggle['session']" class="rounded-dropdown" odpClickOutside
-          (outside)="dropdownToggle['session']=false">
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="dropdownToggle['session']=false;sessionPermission='PNUA'">
-            <div class="icon d-flex align-items-center justify-content-center blocked">
-              <span class="fa fa-lock"></span>
-            </div>
-            <div class="text">Blocked</div>
-          </div>
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="dropdownToggle['session']=false;sessionPermission='PMUA'">
-            <div class="icon d-flex align-items-center justify-content-center manage">
-              <span class="fa fa-pen"></span>
-            </div>
-            <div class="text">Manage</div>
-          </div>
+      </div>
+      <div class="d-flex align-items-center">
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryBlocked" name="library" size="20" [checked]="sessionPermission=='blocked'"
+            (checkedChange)="sessionPermission='PNUA'"></odp-round-radio>
+          <span class="text-dark ml-2">Blocked</span>
+        </div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end"></div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryManage" name="library" size="20" [checked]="sessionPermission=='manage'"
+            (checkedChange)="sessionPermission='PMUA'"></odp-round-radio>
+          <span class="text-dark ml-2">Manage</span>
         </div>
       </div>
     </div>
-  </div>
-  <div class="groups-settings d-flex align-items-start w-100 p-3">
-    <div class="label">
-      <span class="font-weight-bold mr-1">
-        <span class="text">User groups</span>
-        <br>
-        <span class="text-muted font-13">Permission to add or remove groups from a user.</span>
-      </span>
-    </div>
-    <div class="value pl-4 d-flex flex-column">
-      <div class="level-one position-relative mb-3">
-        <div class="rounded-dropdown-toggle d-flex align-items-center ignore-outside"
-          (click)="dropdownToggle['group']=hasPermission('PMGAU')?(!dropdownToggle['group']):false"
-          [ngClass]="{'blocked':groupPermission === 'blocked','manage':groupPermission === 'manage','hover':hasPermission('PMGAU')}">
-          <div class="icon d-flex align-items-center justify-content-center">
-            <span *ngIf="groupPermission === 'blocked'" class="fa fa-lock"></span>
-            <span *ngIf="groupPermission === 'manage'" class="fa fa-pen"></span>
-          </div>
-          <div *ngIf="groupPermission === 'blocked'" class="text">Blocked</div>
-          <div *ngIf="groupPermission === 'manage'" class="text">Manage</div>
-          <span *ngIf="hasPermission('PMGAU')" class="fa fa-angle-down fa-sm"></span>
+    <div class="d-flex justify-content-between border-bottom mt-4">
+      <div>
+        <div class="p-3 text-dark">
+          <div class="font-weight-bold">User's Groups</div>
+          <span class="text-muted font-13">
+            Permission to assign/unassign groups to users.
+          </span>
         </div>
-        <div *ngIf="dropdownToggle['group']" class="rounded-dropdown" odpClickOutside
-          (outside)="dropdownToggle['group']=false">
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="dropdownToggle['group']=false;groupPermission='PNUG'">
-            <div class="icon d-flex align-items-center justify-content-center blocked">
-              <span class="fa fa-lock"></span>
-            </div>
-            <div class="text">Blocked</div>
-          </div>
-          <div class="rounded-dropdown-item d-flex align-items-center"
-            (click)="dropdownToggle['group']=false;groupPermission='PMUG'">
-            <div class="icon d-flex align-items-center justify-content-center manage">
-              <span class="fa fa-pen"></span>
-            </div>
-            <div class="text">Manage</div>
-          </div>
+      </div>
+      <div class="d-flex align-items-center">
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryBlocked" name="library" size="20" [checked]="groupPermission=='blocked'"
+            (checkedChange)="groupPermission='PNUG'"></odp-round-radio>
+          <span class="text-dark ml-2">Blocked</span>
+        </div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end"></div>
+        <div class="permission-btn-block d-flex align-items-center justify-content-end">
+          <odp-round-radio id="libraryManage" name="library" size="20" [checked]="groupPermission=='manage'"
+            (checkedChange)="groupPermission='PMUG'"></odp-round-radio>
+          <span class="text-dark ml-2">Manage</span>
         </div>
       </div>
     </div>
