--- a/src/app/utils/basic-info/basic-info.component.scss
+++ b/src/app/utils/basic-info/basic-info.component.scss
@@ -4,3 +4,16 @@
 .input-width {
     min-width: 300px;
 }
+
+.name-holder {
+    .edit-icon {
+        transition: 0.2s;
+        visibility: hidden;
+    }
+
+    &:hover {
+        .edit-icon {
+            visibility: visible;
+        }
+    }
+}
