--- a/src/app/home/local-bot/local-bot.component.scss
+++ b/src/app/home/local-bot/local-bot.component.scss
@@ -386,3 +386,9 @@
   font-size: 16px;
   color: $headings;
 }
+
+.msg {
+  background: #FF6F00;
+  opacity: 0.04;
+  border-radius: 0px 0px 6px 6px
+}
