--- a/src/app/utils/switch/switch.component.scss
+++ b/src/app/utils/switch/switch.component.scss
@@ -4,6 +4,7 @@
 .switch {
   position: relative;
   cursor: pointer;
+
   &:focus {
     outline: none;
   }
@@ -13,10 +14,10 @@
     padding: 0;
     display: inline-block;
     border: 1px solid #ccc;
-    width: 30px;
-    height: 12px;
-    border-radius: 6px;
-    background: #ccc;
+    width: 40px;
+    height: 24px;
+    border-radius: 12px;
+    background: $lightgrey;
     transition: 0.25s;
   }
 
@@ -29,38 +30,40 @@
     border-radius: 9px;
     background: #fff;
     border: 1px solid #eee;
-    left: 0px;
-    top: -2px;
+    left: 4px;
+    top: 3px;
     transition: 0.25s;
     position: absolute;
-    box-shadow: 0 3px 5px $border !important;
+    box-shadow: 0 3px 5px $border  !important;
   }
 
   input {
     display: none;
   }
 
-  input:checked ~ .toggler {
-    left: 12px;
+  input:checked~.toggler {
+    left: 20px;
   }
 
   &.accent {
-    input:checked ~ .toggler {
+    input:checked~.toggler {
       border: 1px solid $accent;
     }
   }
 
   &.primary {
-    input:checked ~ .toggler {
+    input:checked~.toggler {
       border: 1px solid $primary;
     }
   }
 }
+
 .check-circle {
   max-width: 16px;
   max-height: 16px;
   min-width: 16px;
   min-height: 16px;
+
   .fa {
     font-size: 10px;
   }
