--- a/src/app/utils/switch/switch.component.scss
+++ b/src/app/utils/switch/switch.component.scss
@@ -13,7 +13,6 @@
     margin: 0;
     padding: 0;
     display: inline-block;
-    // border: 1px solid #ccc;
     width: 40px;
     height: 24px;
     border-radius: 12px;
@@ -29,12 +28,10 @@
     height: 18px;
     border-radius: 9px;
     background: #fff;
-    // border: 1px solid #eee;
     left: 3px;
     top: 3px;
     transition: 0.25s;
     position: absolute;
-    // box-shadow: 0 3px 5px $border  !important;
   }
 
   input {
@@ -44,18 +41,6 @@
   input:checked~.toggler {
     left: 18px;
   }
-
-  // &.accent {
-  //   input:checked~.toggler {
-  //     border: 1px solid $accent;
-  //   }
-  // }
-
-  // &.primary {
-  //   input:checked~.toggler {
-  //     border: 1px solid $primary;
-  //   }
-  // }
 }
 
 .check-circle {
@@ -67,4 +52,8 @@
   .fa {
     font-size: 10px;
   }
+}
+
+.text {
+  width: 32px;
 }
